--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "AccountabilityBotty"
+name = "accountability_botty"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,7 +8,7 @@ path = "src/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
-name = "AccountabilityBotty"
+name = "accountability_botty"
 
 [dependencies]
 actix-web = "4.1.0"
