--- a/configuration/production.yaml.example
+++ b/configuration/production.yaml.example
@@ -1,5 +1,4 @@
 application:
-  base_url: "http://127.0.0.1"
-  host: 127.0.0.1
+  discord_token: ""
 database:
-  require_ssl: true
+  require_ssl: false
