--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ anyhow = "1.0.64"
 base64 = "0.13.0"
 sha3 = "0.10.4"
 serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+regex = "1.6.0"
+logger = "0.4.0"
+log = "0.4.17"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
